live-readiness.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-readiness
  labels:
    app: k8s-readiness
spec:
  replicas: 4
  selector:
    matchLabels:
      app: k8s-readiness
  template:
    metadata:
      labels:
        app: k8s-readiness
    spec:
      containers:
        - name: kubernetes-readiness
          image: ghcr.io/khachatur-s/kubernetes-readiness:latest
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /liveness
              port: 5000
            initialDelaySeconds: 15
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 2
          readinessProbe:
            httpGet:
              path: /readiness
              port: 5000
            initialDelaySeconds: 10
            timeoutSeconds: 3
            periodSeconds: 10
            failureThreshold: 3
