service-nodeport.yml
---
# NodePort service
apiVersion: v1
kind: Service
metadata:
  name: k8s-readiness-nodeport
spec:
  type: NodePort
  ports:
    - port: 5000
      nodePort: 30000
      targetPort: 5000
      name: http
  selector:
    app: k8s-readiness
